@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authorization.principalbased.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.oak.composite.MountInfoProviderService;
 import org.apache.jackrabbit.oak.plugins.tree.impl.RootProviderService;
 import org.apache.jackrabbit.oak.plugins.tree.impl.TreeProviderService;
@@ -61,7 +60,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
 
     @Test(expected = ReferenceViolationException.class)
     public void testMissingMountInfoProviderReference() {
-        context.registerInjectActivateService(new FilterProviderImpl(), ImmutableMap.of("path", SUPPORTED_PATH));
+        context.registerInjectActivateService(new FilterProviderImpl(), Map.of("path", SUPPORTED_PATH));
         context.registerInjectActivateService(pbac);
     }
 
@@ -74,10 +73,10 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
     @Test
     public void testMountCollidingWithFilterRoot() {
         FilterProviderImpl fp = new FilterProviderImpl();
-        context.registerInjectActivateService(fp, ImmutableMap.of("path", SUPPORTED_PATH));
+        context.registerInjectActivateService(fp, Map.of("path", SUPPORTED_PATH));
 
         MountInfoProviderService mipService = new MountInfoProviderService();
-        context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {SUPPORTED_PATH + "/some/subtree", "/etc"}));
+        context.registerInjectActivateService(mipService, Map.of("mountedPaths", new String[] {SUPPORTED_PATH + "/some/subtree", "/etc"}));
 
         try {
             context.registerInjectActivateService(pbac, Map.of());
@@ -89,10 +88,10 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
     @Test
     public void testMountMatchingFilterRoot() {
         FilterProviderImpl fp = new FilterProviderImpl();
-        context.registerInjectActivateService(fp, ImmutableMap.of("path", SUPPORTED_PATH));
+        context.registerInjectActivateService(fp, Map.of("path", SUPPORTED_PATH));
 
         MountInfoProviderService mipService = new MountInfoProviderService();
-        context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {SUPPORTED_PATH}));
+        context.registerInjectActivateService(mipService, Map.of("mountedPaths", new String[] {SUPPORTED_PATH}));
 
         context.registerInjectActivateService(pbac, Map.of());
     }
@@ -100,10 +99,10 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
     @Test
     public void testMountAboveFilterRoot() {
         FilterProviderImpl fp = new FilterProviderImpl();
-        context.registerInjectActivateService(fp, ImmutableMap.of("path", SUPPORTED_PATH));
+        context.registerInjectActivateService(fp, Map.of("path", SUPPORTED_PATH));
 
         MountInfoProviderService mipService = new MountInfoProviderService();
-        context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {Text.getRelativeParent(SUPPORTED_PATH, 1)}));
+        context.registerInjectActivateService(mipService, Map.of("mountedPaths", new String[] {Text.getRelativeParent(SUPPORTED_PATH, 1)}));
 
         context.registerInjectActivateService(pbac, Map.of());
     }
@@ -111,20 +110,20 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
     @Test
     public void testMountsElsewhere() {
         FilterProviderImpl fp = new FilterProviderImpl();
-        context.registerInjectActivateService(fp, ImmutableMap.of("path", SUPPORTED_PATH));
+        context.registerInjectActivateService(fp, Map.of("path", SUPPORTED_PATH));
 
         MountInfoProviderService mipService = new MountInfoProviderService();
-        context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {"/etc", "/var/some/mount", UserConstants.DEFAULT_GROUP_PATH}));
+        context.registerInjectActivateService(mipService, Map.of("mountedPaths", new String[] {"/etc", "/var/some/mount", UserConstants.DEFAULT_GROUP_PATH}));
 
         context.registerInjectActivateService(pbac, Map.of());
     }
 
     @Test
     public void testEnableAggregationFilter() throws Exception {
-        context.registerInjectActivateService(new FilterProviderImpl(), ImmutableMap.of("path", SUPPORTED_PATH));
-        context.registerInjectActivateService(new MountInfoProviderService(), ImmutableMap.of("mountedPaths", new String[] {"/etc", "/var/some/mount", UserConstants.DEFAULT_GROUP_PATH}));
+        context.registerInjectActivateService(new FilterProviderImpl(), Map.of("path", SUPPORTED_PATH));
+        context.registerInjectActivateService(new MountInfoProviderService(), Map.of("mountedPaths", new String[] {"/etc", "/var/some/mount", UserConstants.DEFAULT_GROUP_PATH}));
 
-        context.registerInjectActivateService(pbac, ImmutableMap.of(Constants.PARAM_ENABLE_AGGREGATION_FILTER, true));
+        context.registerInjectActivateService(pbac, Map.of(Constants.PARAM_ENABLE_AGGREGATION_FILTER, true));
         assertNotNull(context.getService(AggregationFilter.class));
 
         context.registerInjectActivateService(new AuthorizationConfigurationImpl());
@@ -136,7 +135,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
         context.registerInjectActivateService(new TreeProviderService());
         context.registerService(StatisticsProvider.class, StatisticsProvider.NOOP);
 
-        context.registerInjectActivateService(new SecurityProviderRegistration(), ImmutableMap.of("requiredServicePids", new String[0]));
+        context.registerInjectActivateService(new SecurityProviderRegistration(), Map.of("requiredServicePids", new String[0]));
         SecurityProvider securityProvider = context.getService(SecurityProvider.class);
         assertNotNull(securityProvider);
 
