@@ -149,11 +149,11 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
     }
 
     private Map<String, Value> createGlobRestriction(@NotNull String value) {
-        return ImmutableMap.of(getJcrName(REP_GLOB), getValueFactory(root).createValue(value));
+        return Map.of(getJcrName(REP_GLOB), getValueFactory(root).createValue(value));
     }
 
     private Map<String, Value> createRestrictions(@NotNull String oakName, @NotNull String value) {
-        return ImmutableMap.of(getJcrName(oakName), getValueFactory(root).createValue(value));
+        return Map.of(getJcrName(oakName), getValueFactory(root).createValue(value));
     }
 
     private Map<String, Value[]> createMvRestrictions(@NotNull String oakName, int propertyType, @NotNull String... values) throws ValueFormatException {
@@ -162,7 +162,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
         for (int i = 0; i<values.length; i++) {
             vs[i] = vf.createValue(values[i], propertyType);
         }
-        return ImmutableMap.of(getJcrName(oakName), vs);
+        return Map.of(getJcrName(oakName), vs);
     }
 
     private String getJcrName(@NotNull String oakName) {
@@ -309,7 +309,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
 
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
         String jcrName = namePathMapper.getJcrName("oak:mandatory");
-        Map<String,Value[]> mvRestrictions = ImmutableMap.of(jcrName, new Value[] {getValueFactory(root).createValue(1)});
+        Map<String,Value[]> mvRestrictions = Map.of(jcrName, new Value[] {getValueFactory(root).createValue(1)});
         plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), Map.of(), mvRestrictions);
     }
 
@@ -323,7 +323,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
 
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
         String jcrName = namePathMapper.getJcrName("oak:mandatory");
-        Map<String,Value> svRestrictions = ImmutableMap.of(jcrName, getValueFactory(root).createValue(1));
+        Map<String,Value> svRestrictions = Map.of(jcrName, getValueFactory(root).createValue(1));
         plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, Map.of());
     }
 
@@ -335,7 +335,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
         when(mp.getNamePathMapper()).thenReturn(getNamePathMapper());
 
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
-        Map<String,Value> svRestrictions = ImmutableMap.of("oak:mandatory", getValueFactory(root).createValue(1));
+        Map<String,Value> svRestrictions = Map.of("oak:mandatory", getValueFactory(root).createValue(1));
         plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, Map.of());
     }
 
@@ -354,7 +354,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
         when(mp.getPrivilegeBitsProvider()).thenReturn(new PrivilegeBitsProvider(root));
 
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
-        Map<String,Value> svRestrictions = ImmutableMap.of("mandatory", getValueFactory(root).createValue(1));
+        Map<String,Value> svRestrictions = Map.of("mandatory", getValueFactory(root).createValue(1));
         plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, Map.of());
 
         assertTrue(plc.getEntries().get(0).getRestrictions().contains(r));
